--- a/UnitTesting/app/src/main/res/layout/activity_main.xml
+++ b/UnitTesting/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/data_txtvw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Unit Testing"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="170dp"
+        android:hint="Enter Data"></EditText>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/description_txtvw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/data_txtvw"
+        android:layout_centerInParent="true"
+        android:hint="Enter Description"></EditText>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/submit_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send Data"
+        android:textAllCaps="false"
+        android:layout_below="@id/description_txtvw"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="100dp"
+        >
+    </androidx.appcompat.widget.AppCompatButton>
+
+</RelativeLayout>
